src/parser/snapshots/miniml__parser__tests__lex_int.snap
---
source: src/parser/tests.rs
expression: token_lits
---
[
    (
        Int - <0, 4>,
        "-523",
    ),
]
