src/parser/snapshots/miniml__parser__tests__parse_and_or.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Infix {
        op: Or,
        lhs: Infix {
            op: And,
            lhs: Infix {
                op: Eq,
                lhs: Ident(
                    InternedString(x),
                ),
                rhs: Ident(
                    InternedString(y),
                ),
            },
            rhs: Infix {
                op: Leq,
                lhs: Ident(
                    InternedString(z),
                ),
                rhs: Ident(
                    InternedString(w),
                ),
            },
        },
        rhs: Infix {
            op: Gtr,
            lhs: Ident(
                InternedString(a),
            ),
            rhs: Ident(
                InternedString(b),
            ),
        },
    },
)
