src/parser/snapshots/miniml__parser__tests__parse_apply.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Apply(
        Apply(
            Ident(
                InternedString(f),
            ),
            Ident(
                InternedString(x),
            ),
        ),
        Ident(
            InternedString(y),
        ),
    ),
)
