src/parser/snapshots/miniml__parser__tests__parse_binary.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Int(
            Int {
                value: 42,
                radix: Bin,
            },
        ),
    ),
)
