src/parser/snapshots/miniml__parser__tests__parse_bool.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Bool(
            true,
        ),
    ),
)
