src/parser/snapshots/miniml__parser__tests__parse_char.snap
---
source: src/parser/tests.rs
expression: "tree.expect(\"Tree is empty\")"
---
Expr(
    Lit(
        Char(
            'a',
        ),
    ),
)
