src/parser/snapshots/miniml__parser__tests__parse_data.snap
---
source: src/parser/tests.rs
expression: ast
---
Data(
    Data {
        name: InternedString(Point),
        fields: [
            InternedString(x),
            InternedString(y),
        ],
    },
)
