src/parser/snapshots/miniml__parser__tests__parse_float.snap
---
source: src/parser/tests.rs
expression: ast
---
Expr(
    Lit(
        Real(
            Real(
                5.23,
            ),
        ),
    ),
)
