src/parser/snapshots/miniml__parser__tests__parse_fn_decl.snap
---
source: src/parser/tests.rs
expression: ast
---
Decl(
    Fn(
        FnDecl {
            name: InternedString(f),
            value: Lit(
                Lambda(
                    Lambda {
                        param: Ident(
                            InternedString(x),
                        ),
                        body: Lit(
                            Lambda(
                                Lambda {
                                    param: Ident(
                                        InternedString(y),
                                    ),
                                    body: Infix {
                                        op: Add,
                                        lhs: Ident(
                                            InternedString(x),
                                        ),
                                        rhs: Ident(
                                            InternedString(y),
                                        ),
                                    },
                                },
                            ),
                        ),
                    },
                ),
            ),
        },
    ),
)
